--- a/results.html
+++ b/results.html
@@ -302,6 +302,16 @@
             <div id="main-content-area" class="lg:col-span-3">
                 <!-- Single Result View -->
                 <main id="single-result-view" class="space-y-8 hidden-view">
+                    <!-- Back to Comparison Button (only shown when coming from comparison) -->
+                    <div id="back-to-comparison-btn" class="hidden mb-4">
+                        <button onclick="showCompareView()"
+                            class="bg-white border border-gray-200 text-gray-700 px-6 py-2 rounded-lg font-semibold hover:border-gray-300 hover:shadow-md transition-all flex items-center gap-2">
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                            </svg>
+                            Back to Comparison
+                        </button>
+                    </div>
                     <h1 id="single-title" class="text-3xl font-bold text-center text-gray-900 mb-4">Your
                         Financial Roadmap: [Program]</h1>
 
@@ -431,7 +441,7 @@
                             </div>
                         </div>
 
-                        <!-- Comparison Preview Teaser -->
+                        <!-- Comparison Preview Teaser (hidden when coming from comparison) -->
                         <div id="comparison-preview"
                             class="mt-6 bg-indigo-50 rounded-lg border border-indigo-200 p-5 shadow-sm">
                             <div class="text-center mb-4">
@@ -452,8 +462,8 @@
                             </div>
                         </div>
 
-                        <!-- Comparison Card (Task C) -->
-                        <div class="mt-6 border border-dashed border-gray-300 rounded-lg p-5 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group"
+                        <!-- Comparison Card (Task C) (hidden when coming from comparison) -->
+                        <div id="compare-another-card" class="mt-6 border border-dashed border-gray-300 rounded-lg p-5 text-center cursor-pointer hover:border-indigo-500 hover:bg-indigo-50 transition-all group"
                             onclick="startComparison()">
                             <div class="text-2xl mb-2 text-gray-400 group-hover:text-indigo-500 transition-colors">+
                             </div>
@@ -1230,6 +1240,9 @@
             const singleView = document.getElementById('single-result-view');
             const compareView = document.getElementById('compare-result-view');
 
+            // Mark that we're coming from comparison
+            window.isFromComparison = true;
+
             showSidebar();
             if (mainContentArea) {
                 mainContentArea.classList.remove('lg:col-span-4');
@@ -1237,6 +1250,14 @@
             }
             if (singleView) singleView.classList.remove('hidden-view');
             if (compareView) compareView.classList.add('hidden-view');
+
+            // Show back button and hide comparison sections
+            const backBtn = document.getElementById('back-to-comparison-btn');
+            const comparisonPreview = document.getElementById('comparison-preview');
+            const compareAnotherCard = document.getElementById('compare-another-card');
+            if (backBtn) backBtn.classList.remove('hidden');
+            if (comparisonPreview) comparisonPreview.classList.add('hidden');
+            if (compareAnotherCard) compareAnotherCard.classList.add('hidden');
 
             // Populate sidebar inputs with selected program data
             document.getElementById('single-title').textContent = `Your Financial Roadmap: ${prog.name}`;
@@ -1264,6 +1285,9 @@
             const singleView = document.getElementById('single-result-view');
             const compareView = document.getElementById('compare-result-view');
 
+            // Mark that we're back in comparison view
+            window.isFromComparison = false;
+
             showSidebar();
             if (mainContentArea) {
                 mainContentArea.classList.remove('lg:col-span-4');
@@ -1271,6 +1295,15 @@
             }
             if (compareView) compareView.classList.remove('hidden-view');
             if (singleView) singleView.classList.add('hidden-view');
+
+            // Hide back button and show comparison sections again
+            const backBtn = document.getElementById('back-to-comparison-btn');
+            const comparisonPreview = document.getElementById('comparison-preview');
+            const compareAnotherCard = document.getElementById('compare-another-card');
+            if (backBtn) backBtn.classList.add('hidden');
+            if (comparisonPreview) comparisonPreview.classList.remove('hidden');
+            if (compareAnotherCard) compareAnotherCard.classList.remove('hidden');
+
             window.scrollTo({ top: 0, behavior: 'smooth' });
         };
 
