Fix JavaScript syntax error in comparison search function

--- a/results.html
+++ b/results.html
@@ -1910,7 +1910,8 @@
                         <div class="text-xs text-gray-600">${item.program}</div>
                         <div class="text-xs font-bold text-indigo-600 mt-1">$${item.tuition.toLocaleString()} • ${item.duration}mo</div>
                     </div>
-                `).join('');
+                    `;
+                }).join('');
             }
             
             resultsDiv.classList.remove('hidden');
