--- a/dashboard.html
+++ b/dashboard.html
@@ -230,140 +230,24 @@
             </div>
         </div>
 
-        <!-- Gamification Section (Hidden by default) -->
-        <div id="gamification-section" class="mb-6 hidden">
-            <!-- Achievement Badges -->
-            <div class="bg-white rounded-2xl border border-gray-200 p-5 shadow-sm mb-4">
-                <h3 class="text-xl font-bold text-gray-900 mb-6">Achievements</h3>
-                <div class="grid grid-cols-2 md:grid-cols-4 gap-4" id="achievements-container">
-                    <!-- Achievements will be inserted here -->
+        <!-- Empty State (shown when no plans) -->
+        <div id="empty-state" class="text-center py-12">
+            <div class="max-w-2xl mx-auto">
+                <div class="w-20 h-20 bg-gradient-to-br from-indigo-100 to-purple-100 rounded-full flex items-center justify-center mx-auto mb-6">
+                    <svg class="w-10 h-10 text-indigo-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                    </svg>
                 </div>
+                <h2 class="text-2xl font-bold text-gray-900 mb-3">No plans yet</h2>
+                <p class="text-gray-600 mb-8">Create your first financial roadmap to get started</p>
+                <a href="simulator.html" class="btn btn-primary btn-lg inline-flex items-center gap-2">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
+                    </svg>
+                    Create Your First Plan
+                </a>
             </div>
         </div>
-
-        <!-- Empty State -->
-        <div
-            class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-            1
-        </div>
-        <h3 class="font-bold text-gray-900 mb-2">Find Your Program</h3>
-        <p class="text-sm text-gray-600">Search from 500+ universities and programs worldwide</p>
-        </div>
-        <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
-            <div
-                class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-                2
-            </div>
-            <h3 class="font-bold text-gray-900 mb-2">Add Your Finances</h3>
-            <p class="text-sm text-gray-600">Input savings, scholarships, and expected income</p>
-        </div>
-        <div class="bg-white rounded-2xl border-2 border-indigo-100 p-6 card-hover">
-            <div
-                class="w-16 h-16 bg-gradient-to-br from-indigo-600 to-purple-600 rounded-full flex items-center justify-center text-white font-bold text-2xl mx-auto mb-4">
-                3
-            </div>
-            <h3 class="font-bold text-gray-900 mb-2">Get Your Roadmap</h3>
-            <p class="text-sm text-gray-600">See your funding gap and 24-month cash flow</p>
-        </div>
-        </div>
-
-        <!-- Sample Result Preview (Expandable) -->
-        <div class="max-w-2xl mx-auto mb-6">
-            <details class="bg-gradient-to-br from-indigo-50 to-purple-50 rounded-2xl border-2 border-indigo-200 p-6">
-                <summary class="cursor-pointer font-semibold text-indigo-700 text-lg">
-                    👀 See what your results will look like
-                </summary>
-                <div class="mt-4 text-left">
-                    <img src="https://via.placeholder.com/600x300/667eea/ffffff?text=Sample+Financial+Roadmap"
-                        alt="Sample Result Preview" class="rounded-xl border-2 border-indigo-300 w-full">
-                    <p class="text-sm text-gray-600 mt-3 text-center">Your personalized financial roadmap with
-                        funding gap, cash flow chart, and actionable recommendations</p>
-                </div>
-            </details>
-        </div>
-
-        <!-- CTAs -->
-        <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-            <a href="simulator.html" class="btn btn-primary btn-lg">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
-                </svg>
-                Create Your First Plan
-            </a>
-            <a href="pricing.html"
-                class="bg-white text-indigo-600 border-2 border-indigo-200 px-10 py-4 rounded-xl font-semibold text-lg inline-block hover:bg-indigo-50 transition-all">
-                See Pricing
-            </a>
-        </div>
-
-        <!-- Social Proof -->
-        <div class="mt-12 text-gray-500 text-sm">
-            Rated 4.9/5 by 1,000+ students
-        </div>
-        </div>
-
-        <!-- Populated State -->
-        <div id="populated-state" class="hidden">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Your Saved Plans</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Plan Card 1 -->
-                <div class="card-hover bg-white rounded-2xl border border-gray-200 p-6 shadow-sm">
-                    <div class="flex justify-between items-start mb-4">
-                        <div>
-                            <h3 class="text-xl font-bold text-gray-900 mb-1">MBA Spain</h3>
-                            <p class="text-sm text-gray-500">IE vs. ESADE</p>
-                        </div>
-                        <button class="text-gray-400 hover:text-gray-600 transition-colors">
-                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z">
-                                </path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="mb-6">
-                        <p class="text-sm text-gray-600 mb-2">Funding Gap</p>
-                        <p class="text-4xl font-bold text-red-600">$18,000</p>
-                    </div>
-                    <div class="flex justify-between items-center pt-4 border-t border-gray-100">
-                        <a href="results.html"
-                            class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
-                            View Details →
-                        </a>
-                        <span class="text-xs text-gray-500">Updated 2 days ago</span>
-                    </div>
-                </div>
-
-                <!-- Plan Card 2 -->
-                <div class="card-hover bg-white rounded-2xl border border-gray-200 p-6 shadow-sm">
-                    <div class="flex justify-between items-start mb-4">
-                        <div>
-                            <h3 class="text-xl font-bold text-gray-900 mb-1">Masters UK</h3>
-                            <p class="text-sm text-gray-500">London Business School</p>
-                        </div>
-                        <button class="text-gray-400 hover:text-gray-600 transition-colors">
-                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z">
-                                </path>
-                            </svg>
-                        </button>
-                    </div>
-                    <div class="mb-6">
-                        <p class="text-sm text-gray-600 mb-2">Funding Gap</p>
-                        <p class="text-4xl font-bold text-red-600">$35,000</p>
-                    </div>
-                    <div class="flex justify-between items-center pt-4 border-t border-gray-100">
-                        <a href="results.html"
-                            class="text-indigo-600 font-semibold hover:text-indigo-700 transition-colors">
-                            View Details →
-                        </a>
-                        <span class="text-xs text-gray-500">Updated 1 week ago</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
     </main>
 
 
